# pypi

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: update-index.yml
scripts/: generate_index.py  requirements.txt
simple/: index.html
simple/aiverse-core/: index.html
simple/aiverse-db/: index.html
simple/aiverse-infra/: index.html
simple/aiverse-schemas/: index.html
simple/aiverse-utils/: index.html
tests/: __init__.py  test_generate_index.py
